fix: 解决单词数组的重复问题

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,5 +11,5 @@ server:
   port: 80
 mybatis-plus:
   type-aliases-package: bdbk.learn.model
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
